Set up jquery structure for on click event in faq page

--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -294,37 +294,36 @@
         }
         .entry-content {
           .entry-title {
-            font-size: 2rem;
+            font-size: 1.6rem;
             color: $credible__blue;
-            width: 50%;
+            width: 90%;
             display: flex;
             margin: 2rem auto;
           }
           .amount-funded {
             background-color: rgba(216, 216, 216, 0.18);
-            font-size: 4rem;
+            font-size: 2.2rem;
             color: $innovative__purple;
             margin: 0;
-            padding: 1rem 1.2rem;
+            padding: .6rem .8rem;
+            font-weight: 700;
+
             p .counter {
-              letter-spacing: 0.25rem;
               &:before {
                 content: ' ';
               }
             }
             p .counter,
             p {
-              font-weight: 700;
             }
             p {
               &:nth-child(2n) {
-                font-weight: 600;
-                font-size: 2.8rem;
+                font-size: 1.6rem;
               }
             }
             p,
             .chimp-donate-form {
-              margin: 0.6rem 0;
+              margin: 0.6rem auto;
             }
           }
           .fund-description {
@@ -338,8 +337,16 @@
               margin: 0 auto;
             }
           }
+          .fund-video {
+            p {
+              margin: 0;
+              iframe {
+                width: 100%;
+              }
+            }
+           
+          }
           .main-content {
-            margin-top: 2rem;
             padding: 3rem 0;
             background-color: $cream__background;
             .fund-allowcation {
@@ -348,11 +355,12 @@
               flex-direction: column;
               width: 100%;
               h3 {
-                width: 70%;
+                width: 88%;
                 word-wrap: break-word;
                 color: $credible__blue;
                 margin: 0 auto;
-                font-size: 2rem;
+                font-size: 1.8rem;
+                line-height: 2.4rem;
                 font-weight: 600;
               }
               .fund-allowcations {
@@ -364,19 +372,18 @@
                   margin-top: 2rem;
                   margin-bottom: 3.5rem;
                   .charity-logo {
-                    max-width: 230px;
-                    max-height: 330px;
-                    width: 45%;
+                    width: 100%;
                   }
+        
                   .allocation-text {
                     .percentage {
                       font-size: 5rem;
                       font-weight: bolder;
-                      margin: 2rem 0;
+                      margin: 3.3rem auto;
                     }
                     .description {
                       font-size: 1.6rem;
-                      margin: 0 4rem;
+                      margin: 0 2rem;
                       line-height: 2.3rem;
                     }
                   }
@@ -385,9 +392,9 @@
             }
             .entry-content {
               width: 80%;
-              margin: 0 auto 4rem;
+              margin: 0 auto 2.3rem;
               p {
-                font-size: 1.6rem;
+                font-size: 1.5rem;
                 line-height: 2.4rem;
                 margin-top: 0;
               }
@@ -527,6 +534,12 @@
 /* FAQ Page */
 .page-template-page-faq {
   .entry-header {
+    .entry-title {
+      display: none;
+    }
+    p {
+      display: none;
+    }
   }
   .entry-content {
     .faqs {
@@ -536,16 +549,33 @@
         @include display-flex();
         justify-content: space-between;
         p {
+          font-size: 1rem;
+          font-weight: bolder;
         }
-        .plus {
+        .plus-symbol {
           display: flex;
-         
-        }
-        & :after {
-          content: '\002B';
+          cursor: pointer;
+          .fa-plus {
+
           }
+        }
       }
       .answer {
+        
+          display: none;
+
+        
+      }
+    }
+  }
+  @include desktop {
+    .entry-header {
+      @include display-flex();
+      flex-direction: column;
+      .entry-title, p {
+        display: unset;
+      }
+      & h2:last-child {
         display: none;
       }
     }
