--- a/themes/rcforward/sass/_flickity.scss
+++ b/themes/rcforward/sass/_flickity.scss
@@ -44,8 +44,13 @@
 
 
 .flickity-prev-next-button {
-    width:60px;
-    height:60px;
+    padding:0;
+    width:50px;
+    height:50px;
+    @include tablet{
+        width:60px;
+        height:60px;
+    }
     background-color:transparent;
     &:hover{
         background-color:transparent;
@@ -59,13 +64,13 @@
 
     }
     &.previous{
-        left:-50px;
+        left:-40px;
         @include tablet{
             left:-60px;
         }
     }
     &.next{
-        right:-50px;
+        right:-40px;
         @include tablet{
             right:-60px;
         }   
