--- a/themes/rcforward/sass/style.scss
+++ b/themes/rcforward/sass/style.scss
@@ -70,6 +70,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "front-page";
 @import "contact-page";
 @import "404";
-
+@import "donate";
 
 
