Add fine tuning touches to .entry-title class // Add text-align center to h3 elements in elements.scss

--- a/themes/rcforward/sass/_elements.scss
+++ b/themes/rcforward/sass/_elements.scss
@@ -106,3 +106,13 @@ p{
 .chimp-donate-form {
   background: $code__blue;
 }
+
+.related-charities-title {
+    text-align: center;
+}
+
+.why-donate {
+    h3 {
+        text-align: center;
+    }
+}
