--- a/themes/rcforward/sass/_widgets.scss
+++ b/themes/rcforward/sass/_widgets.scss
@@ -35,6 +35,7 @@
       font-size: 1.5rem;
       letter-spacing: 0.099rem;
       margin-bottom: 1.5rem;
+      text-transform: none;
     }
     .mc4wp-form {
       .mc4wp-form-fields {
