--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -269,6 +269,12 @@ p {
 .chimp-donate-form {
   background: #00BEA8; }
 
+.related-charities-title {
+  text-align: center; }
+
+.why-donate h3 {
+  text-align: center; }
+
 .main-navigation .menu-item-has-children {
   position: relative; }
   .main-navigation .menu-item-has-children > ul {
@@ -518,7 +524,8 @@ p {
       font-weight: 400;
       font-size: 1.5rem;
       letter-spacing: 0.099rem;
-      margin-bottom: 1.5rem; }
+      margin-bottom: 1.5rem;
+      text-transform: none; }
     .footer-sidebar .widget .mc4wp-form .mc4wp-form-fields {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -779,7 +786,8 @@ body .hide-desktop {
       flex-direction: column; }
   .page-template-page-how-it-works .site-content .entry-main p strong {
     font-size: 2.6rem;
-    color: #14225F; }
+    color: #14225F;
+    line-height: 3rem; }
   .page-template-page-how-it-works .site-content .entry-main h3 {
     display: none; }
     @media (min-width: 1000px) {
@@ -810,10 +818,11 @@ body .hide-desktop {
     margin: 0 auto; }
     .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(3n) .wp-block-column:first-child p:first-child,
     .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p:first-child {
-      width: 80%; }
+      width: 87%; }
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:nth-child(3n) .wp-block-column:first-child p:first-child strong,
       .page-template-page-how-it-works .site-content .entry-main .wp-block-columns:last-child .wp-block-column:first-child p:first-child strong {
         font-size: 1.5rem;
+        line-height: 1.6rem;
         color: #192726; }
   .page-template-page-how-it-works .site-content .entry-main .wp-block-columns .wp-block-column {
     margin-bottom: 0; }
@@ -877,7 +886,6 @@ body .hide-desktop {
     .single-fund .hfeed .site-content .type-fund .fund-header .fund-image img {
       -o-object-position: center;
          object-position: center;
-      height: 100vh;
       width: 100%;
       -o-object-fit: cover;
          object-fit: cover; }
@@ -913,7 +921,6 @@ body .hide-desktop {
       content: ' '; }
     .single-fund .hfeed .site-content .type-fund .entry-content .amount-funded p:nth-child(2n) {
       font-size: 1.6rem; }
-    .single-fund .hfeed .site-content .type-fund .entry-content .amount-funded p,
     .single-fund .hfeed .site-content .type-fund .entry-content .amount-funded .chimp-donate-form {
       margin: 0.6rem auto; }
   .single-fund .hfeed .site-content .type-fund .entry-content .fund-description {
@@ -968,7 +975,8 @@ body .hide-desktop {
           margin-top: 2rem;
           margin-bottom: 3.5rem; }
           .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation .charity-logo {
-            width: 100%; }
+            width: 80%;
+            max-height: 25rem; }
           .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation .allocation-text .percentage {
             font-size: 5rem;
             font-weight: bolder;
@@ -978,10 +986,10 @@ body .hide-desktop {
             margin: 0 2rem;
             line-height: 2.3rem; }
     .single-fund .hfeed .site-content .type-fund .entry-content .main-content .entry-content {
-      width: 80%;
+      width: 85%;
       margin: 0 auto 2.3rem; }
       .single-fund .hfeed .site-content .type-fund .entry-content .main-content .entry-content p {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         line-height: 2.4rem;
         margin-top: 0; }
 
