change donate page title position to center

--- a/themes/rcforward/sass/_donate.scss
+++ b/themes/rcforward/sass/_donate.scss
@@ -71,6 +71,7 @@
         @include tablet-large{
             line-height:2.3rem;
             width:400px;
+            margin:0 auto;
             letter-spacing: 1px;
             @include font-size(1.3);
         }
