--- a/themes/rcforward/sass/_donate.scss
+++ b/themes/rcforward/sass/_donate.scss
@@ -133,8 +133,8 @@
                     order:1;
                 }
                 @include desktop{
-                    width:140px;
-                    height:140px;
+                    width:160px;
+                    height:160px;
                 }
             }
             h4{
@@ -151,8 +151,11 @@
                 }
                 font-weight:700;
                 @include tablet-large{
-                    height:60px;
+                    height:40px;
                     margin:0;
+                }
+                @include desktop{
+                    height:30px;
                 }
             }
             a{
@@ -175,6 +178,7 @@
                             }
                             @include tablet-large{
                                 width:85%;
+                                height:3.5rem;
                             }
             }
             .fund-description{
@@ -183,8 +187,10 @@
                 @include tablet-large{
                     margin:1.5rem auto;
                     @include font-size(1);
-                    height:145px;
-                    
+                    height:150px;  
+                }
+                @include desktop{
+                    padding: 0 1rem;
                 }
             }
 
@@ -370,6 +376,11 @@
                     width:100px;
                 height:100px;
                 }
+                @include desktop{
+                    height:130px;
+                    width:130px;
+                    bottom:-30px;
+                }
                 position: absolute;
                 border-radius: 50%;
                 overflow: hidden;
@@ -384,6 +395,10 @@
                     @include tablet-large{
                         max-width:80px;
                         max-height:80px;
+                    }
+                    @include desktop{
+                        max-width:105px;
+                        max-height:105px;
                     }
                 }
             }
@@ -403,7 +418,10 @@
                    }
                    @include tablet-large{
                     @include font-size(1.2);
-                    height:60px;
+                    height:40px;
+                   }
+                   @include desktop{
+                    height:25px;
                    }
                }
                .desktop-version{
@@ -440,8 +458,6 @@
                 width:75%;
                 @include font-size(1.2);
                }
-            
-
                .donate-button{
                 @include button($code__blue);
                 @include green-button;
